<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ArchiveWindow</class>
 <widget class="QMainWindow" name="ArchiveWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>401</width>
    <height>499</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QPushButton" name="but_home">
    <property name="geometry">
     <rect>
      <x>140</x>
      <y>330</y>
      <width>131</width>
      <height>71</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>IRNazanin</family>
      <pointsize>25</pointsize>
      <weight>50</weight>
      <italic>false</italic>
      <bold>false</bold>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton {
    background-color: transparent; /* Transparent background */
    color: rgb(0,0,0); /* Text color */
    border: 2px solid gray; /* Border around the button */
    padding: 5px; /* Increased padding for better touch targets */
    border-radius: 25px; /* Rounded corners */
    margin: 5px; /* Uniform margin on all sides */
    font-size: 25px; /* Font size for better readability */
	font: 25pt &quot;IRNazanin&quot;;
border-bottom: 2px solid rgba(105,118,132,255);
}

QPushButton:hover {
    border-color: rgba(190, 190, 190, 0.7); /* Lighter border on hover */
    background-color: rgba(255, 255, 255, 0.1); /* Light background on hover for visual feedback */
}

QPushButton:pressed {
    background-color: rgba(255, 255, 255, 0.2); /* Darker background when pressed */
	font: 20pt &quot;Ubuntu&quot;;
    border-color: rgba(150, 150, 150, 0.8); /* Change border color when pressed */
}

QPushButton:disabled {
    color: rgba(255, 255, 255, 0.5); /* Lighter text color when disabled */
    border-color: rgba(190, 190, 190, 0.3); /* Lighter border when disabled */
}
</string>
    </property>
    <property name="text">
     <string>خانه</string>
    </property>
   </widget>
   <widget class="QPushButton" name="but_extraction">
    <property name="geometry">
     <rect>
      <x>120</x>
      <y>210</y>
      <width>171</width>
      <height>81</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>IRNazanin</family>
      <pointsize>35</pointsize>
      <weight>50</weight>
      <italic>false</italic>
      <bold>false</bold>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton {
    background-color: transparent; /* Transparent background */
    color: rgb(0,0,0); /* Text color */
    border: 2px solid gray; /* Border around the button */
    padding: 5px; /* Increased padding for better touch targets */
    border-radius: 25px; /* Rounded corners */
    margin: 5px; /* Uniform margin on all sides */
    font-size: 35px; /* Font size for better readability */
	font: 35pt &quot;IRNazanin&quot;;
border-bottom: 2px solid rgba(105,118,132,255);
}

QPushButton:hover {
    border-color: rgba(190, 190, 190, 0.7); /* Lighter border on hover */
    background-color: rgba(255, 255, 255, 0.1); /* Light background on hover for visual feedback */
}

QPushButton:pressed {
    background-color: rgba(255, 255, 255, 0.2); /* Darker background when pressed */
	font: 20pt &quot;Ubuntu&quot;;
    border-color: rgba(150, 150, 150, 0.8); /* Change border color when pressed */
}

QPushButton:disabled {
    color: rgba(255, 255, 255, 0.5); /* Lighter text color when disabled */
    border-color: rgba(190, 190, 190, 0.3); /* Lighter border when disabled */
}
</string>
    </property>
    <property name="text">
     <string>مشاهد</string>
    </property>
   </widget>
   <widget class="QPushButton" name="but_import">
    <property name="geometry">
     <rect>
      <x>120</x>
      <y>110</y>
      <width>171</width>
      <height>81</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>IRNazanin</family>
      <pointsize>35</pointsize>
      <weight>50</weight>
      <italic>false</italic>
      <bold>false</bold>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton {
    background-color: transparent; /* Transparent background */
    color: rgb(0,0,0); /* Text color */
    border: 2px solid gray; /* Border around the button */
    padding: 5px; /* Increased padding for better touch targets */
    border-radius: 25px; /* Rounded corners */
    margin: 5px; /* Uniform margin on all sides */
    font-size: 35px; /* Font size for better readability */
	font: 35pt &quot;IRNazanin&quot;;
border-bottom: 2px solid rgba(105,118,132,255);
}

QPushButton:hover {
    border-color: rgba(190, 190, 190, 0.7); /* Lighter border on hover */
    background-color: rgba(255, 255, 255, 0.1); /* Light background on hover for visual feedback */
}

QPushButton:pressed {
    background-color: rgba(255, 255, 255, 0.2); /* Darker background when pressed */
	font: 20pt &quot;Ubuntu&quot;;
    border-color: rgba(150, 150, 150, 0.8); /* Change border color when pressed */
}

QPushButton:disabled {
    color: rgba(255, 255, 255, 0.5); /* Lighter text color when disabled */
    border-color: rgba(190, 190, 190, 0.3); /* Lighter border when disabled */
}
</string>
    </property>
    <property name="text">
     <string>ثبت</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_pic">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>401</width>
      <height>501</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="pixmap">
     <pixmap>2.jpg</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>10</y>
      <width>401</width>
      <height>71</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>IRNazanin</family>
      <pointsize>30</pointsize>
      <weight>50</weight>
      <italic>false</italic>
      <bold>false</bold>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">color: rgb(0,0,0);
font: 30pt &quot;IRNazanin&quot;;color: rgb(0,0,0);
</string>
    </property>
    <property name="text">
     <string>بایگانی</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <zorder>label_pic</zorder>
   <zorder>but_home</zorder>
   <zorder>but_extraction</zorder>
   <zorder>but_import</zorder>
   <zorder>label</zorder>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
